added night mode and improved accessability

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <p>ImNa@gmail.com</p>
                 </div>
             </div>
+            <button id="nightModeToggle">🌙 Night Mode</button>
         </div>
 
         <div class="main">
@@ -345,8 +346,6 @@
 
     </div>
 
-
-    
     <script src="script.js"></script>
 </body>
 </html>
